fix align

--- a/draw.css
+++ b/draw.css
@@ -30,8 +30,8 @@ p {
 
 canvas {
     position: relative;
-    top: 50px;
-    left: 540px;
+    top: 80px;
+    left: 200px;
     border: 3px inset gray;
 }
 
